--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@chakra-ui/gatsby-plugin": "^1.0.1",
+    "@chakra-ui/icons": "^1.0.3",
+    "@chakra-ui/react": "^1.1.5",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "@szhsin/react-menu": "^1.5.0",
-    "gatsby": "^2.26.1",
+    "framer-motion": "^3.2.1",
+    "gatsby": "^2.31.0",
     "gatsby-image": "^2.5.0",
+    "gatsby-plugin-emotion": "^5.3.0",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
