--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "react-scripts": "^4.0.2"
   },
   "devDependencies": {
     "prettier": "2.2.1"
