--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "gatsby": "^2.31.0",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-emotion": "^5.3.0",
+    "gatsby-plugin-image": "^0.7.1",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
-    "gatsby-plugin-sharp": "^2.8.0",
-    "gatsby-source-filesystem": "^2.8.1",
+    "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-source-filesystem": "^2.11.0",
     "gatsby-source-wordpress": "^4.0.0",
-    "gatsby-transformer-sharp": "^2.6.0",
+    "gatsby-transformer-sharp": "^2.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
