--- a/package.json
+++ b/package.json
@@ -1,56 +1,64 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "@chakra-ui/gatsby-plugin": "^1.0.1",
-    "@chakra-ui/icons": "^1.0.3",
-    "@chakra-ui/react": "^1.1.5",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
-    "@szhsin/react-menu": "^1.5.0",
-    "framer-motion": "^3.2.1",
-    "gatsby": "^2.31.0",
-    "gatsby-image": "^2.5.0",
-    "gatsby-plugin-emotion": "^5.3.0",
-    "gatsby-plugin-image": "^0.7.1",
-    "gatsby-plugin-manifest": "^2.6.1",
-    "gatsby-plugin-offline": "^3.4.0",
-    "gatsby-plugin-react-helmet": "^3.4.0",
-    "gatsby-plugin-sharp": "^2.14.1",
-    "gatsby-source-filesystem": "^2.11.0",
-    "gatsby-source-wordpress": "^4.0.0",
-    "gatsby-transformer-sharp": "^2.12.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.1.0",
-    "react-scripts": "^4.0.2"
-  },
-  "devDependencies": {
-    "prettier": "2.2.1"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "0BSD",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+    "name": "gatsby-starter-default",
+    "private": true,
+    "description": "A simple starter to get up and developing quickly with Gatsby",
+    "version": "0.1.0",
+    "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+    "dependencies": {
+        "@chakra-ui/gatsby-plugin": "^1.0.1",
+        "@chakra-ui/icons": "^1.0.3",
+        "@chakra-ui/react": "^1.1.5",
+        "@emotion/react": "^11.1.4",
+        "@emotion/styled": "^11.0.0",
+        "@szhsin/react-menu": "^1.5.0",
+        "framer-motion": "^3.2.1",
+        "gatsby": "^2.31.0",
+        "gatsby-image": "^2.5.0",
+        "gatsby-plugin-emotion": "^5.3.0",
+        "gatsby-plugin-image": "^0.7.1",
+        "gatsby-plugin-manifest": "^2.6.1",
+        "gatsby-plugin-offline": "^3.4.0",
+        "gatsby-plugin-react-helmet": "^3.4.0",
+        "gatsby-plugin-sharp": "^2.14.1",
+        "gatsby-source-filesystem": "^2.11.0",
+        "gatsby-source-wordpress": "^4.0.0",
+        "gatsby-transformer-sharp": "^2.12.0",
+        "prop-types": "^15.7.2",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-helmet": "^6.1.0",
+        "react-icons": "^4.1.0",
+        "react-scripts": "^4.0.2"
+    },
+    "devDependencies": {
+        "babel-eslint": "^10.0.3",
+        "eslint": "^6.8.0",
+        "eslint-config-babel": "^9.0.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-import": "^2.20.0",
+        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-standard": "^4.0.1",
+        "prettier": "2.2.1"
+    },
+    "keywords": [
+        "gatsby"
+    ],
+    "license": "0BSD",
+    "scripts": {
+        "build": "gatsby build",
+        "develop": "gatsby develop",
+        "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+        "start": "npm run develop",
+        "serve": "gatsby serve",
+        "clean": "gatsby clean",
+        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    },
+    "bugs": {
+        "url": "https://github.com/gatsbyjs/gatsby/issues"
+    }
 }
