--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,9 @@
     ],
     "plugins": ["prettier"],
     "rules": {
-      "prettier/prettier": "error"
-    },
+      "prettier/prettier": "error",
+      "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+      "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies    },
     "parser": "babel-eslint",
     "env": {
       "browser": true
