--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "eslint-plugin-import": "^2.20.0",
         "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react-hooks": "^1.7.0",
         "eslint-plugin-standard": "^4.0.1",
         "prettier": "2.2.1"
     },
